# -autonomous-mobile-robot-sim-

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
config/: bridge.yaml  ekf.yaml  frames_2025-12-14_19.48.29.gv  nav2_params.yaml  slam_toolbox_params.yaml
launch/: ign_launch.py  launch.py  navigation.launch.py  slam.launch.py
maps/: my_map.pgm  my_map.yaml
meshes/: base_link.STL  front_left_wheel.STL  front_right_wheel.STL  left_wheel.STL  right_wheel.STL  small_left.STL  small_right.STL
scripts/: keyboard_map_saver.py
urdf/: diff_robot.urdf  ign_robot.urdf  rviz.rviz
worlds/: maze.sdf
